--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": ">=5.3.0",
         "ext-soap": "*",
         "besimple/soap-common": "0.3.*",
-        "besimple/soap-wsdl": "0.3.*",
+        "ccapndave/soap-wsdl": "dev-master",
         "ass/xmlsecurity": "~1.0",
         "symfony/framework-bundle": "~2.6",
         "symfony/twig-bundle": "~2.6",
